[gd_scene load_steps=9 format=3 uid="uid://dci0hxs27qcsp"]

[ext_resource type="Script" path="res://Scripts/butterfly_enemy.gd" id="1_n4ic4"]
[ext_resource type="Texture2D" uid="uid://d3ltnerlhfys5" path="res://Assets/Sprites/Butterfly.png" id="1_o6uht"]

[sub_resource type="Animation" id="Animation_brcl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_0bew0"]
resource_name = "move"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7w4c"]
_data = {
"RESET": SubResource("Animation_brcl0"),
"move": SubResource("Animation_0bew0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kmdkk"]
radius = 21.095

[sub_resource type="CircleShape2D" id="CircleShape2D_qqnpu"]
radius = 271.398

[sub_resource type="CircleShape2D" id="CircleShape2D_rt0m0"]
radius = 37.054

[node name="ButterflyEnemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_n4ic4")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Enemy"]]
texture = ExtResource("1_o6uht")
hframes = 2
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["Enemy"]]
libraries = {
"": SubResource("AnimationLibrary_w7w4c")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
visible = false
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_kmdkk")

[node name="Move" type="Timer" parent="." groups=["Enemy"]]
autostart = true

[node name="Shoot" type="Timer" parent="." groups=["Enemy"]]
wait_time = 2.0

[node name="Rotater" type="Node2D" parent="." groups=["Enemy"]]

[node name="PlayerEnter" type="Area2D" parent="." groups=["Enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnter" groups=["Enemy"]]
shape = SubResource("CircleShape2D_qqnpu")
debug_color = Color(0.713726, 0.576471, 0, 0.172549)

[node name="EnemyHurtBox" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox" groups=["Enemy"]]
position = Vector2(-3, -6)
shape = SubResource("CircleShape2D_rt0m0")
debug_color = Color(0.429307, 0.0461968, 0.0148109, 0.513726)

[connection signal="timeout" from="Move" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="body_entered" from="PlayerEnter" to="." method="_on_player_enter_body_entered"]
[connection signal="body_exited" from="PlayerEnter" to="." method="_on_player_enter_body_exited"]
[connection signal="area_entered" from="EnemyHurtBox" to="." method="_on_enemy_hurt_box_area_entered"]
